# ctf-try-process-visualizer

./: app.py  graph.py  log-analyze.py  pyproject.toml
ctf_try_process_visualizer/: analyze.py  graph.py
data/: cwe-id-dict-v2.json  cwe-id-dict.json  modsecurity.conf
data/cwe top 25/: 1430.csv
data/owasp top ten/: csv-to-json.py
log/: modsec_audit.json  tmp.json
log/ctfd/1122-11-37/: 予備実験CTF-awards.csv  予備実験CTF-challenge_topics.csv  予備実験CTF-challenges.csv  予備実験CTF-config.csv  予備実験CTF-fields.csv  予備実験CTF-scoreboard.csv  予備実験CTF-solves.csv  予備実験CTF-submissions.csv  予備実験CTF-teams+members+fields.csv  予備実験CTF-teams.csv  予備実験CTF-tokens.csv  予備実験CTF-tracking.csv  予備実験CTF-users.csv
log/ctfd/1122-12-22/: 予備実験CTF-brackets.csv  予備実験CTF-comments.csv  予備実験CTF-config.csv  予備実験CTF-field_entries.csv  予備実験CTF-files.csv  予備実験CTF-flags.csv  予備実験CTF-hints.csv  予備実験CTF-notifications.csv  予備実験CTF-pages.csv  予備実験CTF-tags.csv  予備実験CTF-tracking.csv  予備実験CTF-unlocks.csv
log/search_queries/: search_queries-ohasi.json  search_queries-sugiyama.json  search_queries-suzuoki.json
log/servers/: server-1-modsec_audit-1122-1223.json  server-2-modsec_audit-1122-1133.json  server-2-modsec_audit-1122-1223.json  server-3-modsec_audit-1122-1131.json  server-3-modsec_audit-1122-1223.json
src/ctf_try_process_visualizer/: __init__.py  tmp.py
tmp/: nginx.conf
