[project]
name = "ctf-try-process-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "dash>=2.18.2",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

[dependency-groups]
dev = [
    "chardet>=5.2.0",
]
